swagger docs added and some routes added
