# src/models/schedule.model.ts
@@ -1,6 +1,7 @@
 import { RowDataPacket } from "mysql2"
 
 export default interface Schedule extends RowDataPacket {
-  date?: string;
-  user_id?: number;
+  date: string;
+  user_id: number;
+  username?: string;
 }
